# adafruit_gps

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  reboot_cmd.txt  specs.md
benches/: read_write.rs
examples/: advanced.rs  debug.rs  example_io.rs  increase_frequency.rs  readline.rs  save_to_file.rs  simple.rs  test_update_rate.rs
geodesy/: Cargo.toml
geodesy/src/: functions.rs  kinematics.rs  lib.rs  main.rs  position.rs
src/: PMTK.rs  bin.rs  gps_accuracy.rs  lib.rs  main.rs  nmea.rs  open_gps.rs  pmtk.rs  reboot_cmd.txt
