[package]
name = "adafruit_gps"
version = "0.2.2"
authors = ["Matt Barson <matt.barson@gmail.com>"]
edition = "2018"
licence = "MIT OR Apache-2.0"
license-file = "LICENSE"
description = "Port of the adafruit python libary for their Ultimate GPS or Adafruit Mini GPS PA1010D."
readme = "README.md"
repository = "https://github.com/MechanicalPython/adafruit_gps"
keywords = ["GPS", "adafruit"]


[lib]
name = "adafruit_gps"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.3.0"
