[package]
name = "adafruit_gps"
version = "0.4.0"
authors = ["Matt Barson <matt.barson@gmail.com>"]
edition = "2018"
licence = "MIT OR Apache-2.0"
license-file = "LICENSE"
description = "GPS parser and reader for the adafruit Ultimate GPS or Adafruit Mini GPS PA1010D."
readme = "README.md"
repository = "https://github.com/MechanicalPython/adafruit_gps"
keywords = ["GPS", "adafruit"]


[lib]
name = "adafruit_gps"
path = "src/lib.rs"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.3.0"
geodesy = {path = "geodesy"}

