[package]
name = "geodesy"
version = "0.1.0"
authors = ["Matt Barson <matt.barson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "geodesy"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/bin/bin.rs"

[dependencies]
plotters = "0.2.14"